--- a/index.html
+++ b/index.html
@@ -1,10 +1,1 @@
-Hello world
-Bbye world 
-welcome to ATLAS 3i World 
-Hhhiihihihih
-
-Ab bahut enough ho gya hai Class ko end karte hai
-
-
-
-hihihihihih
+hhii
